Fixed iOS font rendering on iOS

--- a/less/subbscribe.less
+++ b/less/subbscribe.less
@@ -19,7 +19,7 @@
 	right: 15px;
 	bottom: 15px;
 	border: 1px solid @border-color;
-	font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif; 
+	font-family: "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif; 
 	-webkit-font-smoothing: antialiased;
 	font-weight: 300;
    	font-size: 17px;
@@ -144,6 +144,7 @@
 				font-size: 13px;
 				font-weight: 500 !important;
 				width: 100%;
+				color: @text-color;
 			}
 
 			input {
@@ -154,10 +155,12 @@
 				border: 1px solid darken(@border-color, 5%);
 				padding: 7px;
 				font-size: 12px;
-				display:block; 
+				display:block;
+				color: darken( @text-color, 15% );
 				width:100%;
 				padding:5px 0;			}
 				padding-left: 5px;
+				color: darken( @text-color, 10% );
 
 				input.error {
 					border-color: @error;
